--- a/src/components/Onboarding/Teilen/style.module.less
+++ b/src/components/Onboarding/Teilen/style.module.less
@@ -6,7 +6,16 @@
   margin-bottom: 1rem;
   padding: 1rem;
   display: flex;
+  justify-content: space-between;
+}
+
+.shareButtonContainer {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
+  color: @white;
+  background-color: @aqua;
+  width: 47.5%;
 }
 
 .previewContainer {
