--- a/src/components/Profile/style.module.less
+++ b/src/components/Profile/style.module.less
@@ -31,6 +31,10 @@
   }
 }
 
+.avatarContainer {
+  margin-right: 4rem;
+}
+
 .userInfo {
   display: grid;
   grid-template-columns: 200px auto;
@@ -109,7 +113,7 @@
   right: 1rem;
 }
 
-.linkLikeFormated {
+.linkLikeFormatted {
   text-decoration: underline;
   cursor: pointer;
   margin: 0;
