Styling changes: - Added border - Increased background blur

--- a/src/components/Onboarding/style.module.less
+++ b/src/components/Onboarding/style.module.less
@@ -1,6 +1,7 @@
 @import '../../components/style/vars.less';
 .onboardingOverlayContainer {
   background-color: @white;
+  border: 1px solid @violet;
   border-radius: 25px;
 }
 .pageContainer {
