--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -32,7 +32,9 @@
     h1,
     h2,
     h3 {
-      color: @violet;
+      // Note: is that ok ?
+      // color: @violet;
+      color: var(--secondary-color);
     }
   }
 
@@ -56,6 +58,7 @@
     --text-on-secondary-color: @white;
     --button-font-color: @white;
     --button-bg-color: @whiteTransparent;
+
   }
 
   &.sectionRed {
