--- a/src/components/Onboarding/style.module.less
+++ b/src/components/Onboarding/style.module.less
@@ -3,6 +3,8 @@
   background-color: @white;
   border: 1px solid @violet;
   border-radius: 25px;
+  max-width: 50rem;
+  margin: 0 auto;
 }
 .pageContainer {
   max-width: 74rem;
@@ -49,15 +51,14 @@
   justify-content: space-between;
 
   @media (max-width: @breakPointM) {
-    margin-top: 6rem;
-    max-width: 72rem;
+    //max-width: 72rem;
     padding-left: 1rem;
     padding-right: 1rem;
   }
 
   @media (max-width: @breakPointS) {
-    margin-top: 4.75rem;
-    max-width: 71rem;
+    margin-top: 0;
+    //max-width: 71rem;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
   }
