--- a/src/components/Overlay/style.module.less
+++ b/src/components/Overlay/style.module.less
@@ -68,6 +68,10 @@
   overflow-y: scroll;
   overflow-x: hidden;
   backdrop-filter: blur(35px);
+
+  @media (max-width: @breakPointS) {
+    padding: 1rem;
+  }
 }
 
 .closeButtonOnboarding {
