SinUp from Onboarding

--- a/src/components/Onboarding/style.module.less
+++ b/src/components/Onboarding/style.module.less
@@ -6,6 +6,7 @@
   max-width: 50rem;
   margin: 0 auto;
 }
+
 .pageContainer {
   max-width: 74rem;
   padding: 2rem 2rem;
@@ -146,4 +147,14 @@
   padding: 0.5rem 0 0 0;
   display: flex;
   justify-content: space-around;
+}
+
+.lonelyCloseButton {
+  background-color: @red;
+  width: 2.4rem;
+  border-radius: 5px;
+  padding: 0.5rem 0.4rem 0.4rem 0.5rem;
+  margin: 1rem;
+  float: right;
+  cursor: pointer;
 }
