Added new checkbox to nudge users for newsletter consent

--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -31,6 +31,7 @@ h1,
 h2 {
   font-size: @DesktopFontSizeXL;
   letter-spacing: 0.15px;
+  margin: 0 0 1rem 0;
 
   @media (max-width: @breakPointM) {
     font-size: @MobileFontSizeXL;
