Some styling cleanup - Removed background illustrations for now - SectionTwoColumns now also has color scheme

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -69,7 +69,9 @@
     --button-bg-color: @whiteTransparent;
   }
 
-  &:nth-child(3n + 1):not(:only-child),
+  // Illustrations need a Redo
+
+  /* &:nth-child(3n + 1):not(:only-child),
   &:nth-child(3n + 3),
   &:only-child {
     &.sectionCrowdCollect,
@@ -104,7 +106,7 @@
     &.sectionNewsletter {
       background-image: url('./backgrounds/newsletter_yellow.svg');
     }
-  }
+  } */
 
   &Video {
     padding-bottom: 5rem;
