--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -169,7 +169,9 @@
     padding-top: 2rem;
   }
 
-  &CrowdCollect,
+  // Illustrations need Redo
+
+  /* &CrowdCollect,
   &Confetti {
     background-image: url('./backgrounds/crowd_collect_yellow_desktop.svg');
 
@@ -192,7 +194,7 @@
     @media (max-width: 900px) {
       background-image: url('./backgrounds/crowd_question_yellow_mobile.svg');
     }
-  }
+  } */
 
   &CrowdCollect,
   &Confetti,
