basic profile tile setup

--- a/src/components/Profile/ProfileTile/style.module.less
+++ b/src/components/Profile/ProfileTile/style.module.less
@@ -35,6 +35,25 @@
   --button-bg-color: @whiteTransparent;
 }
 
+&.sectionWhite {
+  background-color: @white;
+  color: @black;
+  --bg-color: @white;
+  --font-color: @black;
+  --secondary-color: @violet;
+  --text-on-secondary-color: @white;
+  --button-font-color: @violet;
+  --button-bg-color: @violetTransparent;
+
+  h1,
+  h2,
+  h3 {
+    // Note: is that ok ?
+    // color: @violet;
+    color: var(--secondary-color);
+  }
+}
+
 .flexElement {
   width: 47.5%;
 
