Adjusted button styling for hover

--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -24,8 +24,8 @@
   }
 
   &:hover {
-    color: var(--bg-color);
-    background: var(--font-color);
+    color: var(--button-hover-font-color);
+    background: var(--button-hover-bg-color);
   }
 
   &:focus {
