--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -13,6 +13,8 @@
   --text-on-secondary-color: @white;
   --button-font-color: @violet;
   --button-bg-color: @violetTransparent;
+  --button-hover-bg-color: @violet;
+  --button-hover-font-color: @white;
 
   @media (max-width: @breakPointS) {
     margin-top: 0;
