--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -28,6 +28,8 @@
     --text-on-secondary-color: @white;
     --button-font-color: @violet;
     --button-bg-color: @violetTransparent;
+    --button-hover-bg-color: @violet;
+    --button-hover-font-color: @white;
 
     h1,
     h2,
@@ -47,6 +49,8 @@
     --text-on-secondary-color: @white;
     --button-font-color: @white;
     --button-bg-color: @whiteTransparent;
+    --button-hover-bg-color: @white;
+    --button-hover-font-color: @violet;
   }
 
   &.sectionAqua {
@@ -58,7 +62,8 @@
     --text-on-secondary-color: @white;
     --button-font-color: @white;
     --button-bg-color: @whiteTransparent;
-
+    --button-hover-bg-color: @white;
+    --button-hover-font-color: @aqua;
   }
 
   &.sectionRed {
@@ -70,6 +75,8 @@
     --text-on-secondary-color: @black;
     --button-font-color: @white;
     --button-bg-color: @whiteTransparent;
+    --button-hover-bg-color: @white;
+    --button-hover-font-color: @red;
   }
 
   // Illustrations need a Redo
