add ticker for municipality

--- a/src/components/Profile/ProfileTile/style.module.less
+++ b/src/components/Profile/ProfileTile/style.module.less
@@ -22,6 +22,11 @@
       line-height: 1.625rem;
     }
   }
+
+  .municipalityLabel {
+    color: var(--secondary-color);
+    margin-bottom: 0.5rem;
+  }
 }
 
 &.sectionAqua {
@@ -107,6 +112,16 @@
 
   }
 }
+
+.municipalityButtonGroup {
+  @media (max-width: @breakPointL) {
+    margin-bottom: 3rem;
+  }
+}
+
+
+
+
 
 .infoText {
   font-size: @DesktopFontSizeM;
