--- a/src/components/TickerToSignup/style.module.less
+++ b/src/components/TickerToSignup/style.module.less
@@ -1,1 +1,12 @@
 @import '../../components/style/vars.less';
+
+.signUpCTA {
+  font-size: @MobileFontSizeXL;
+  width: 95%;
+  padding-top: 1rem;
+  padding-bottom: 0.7rem;
+
+  @media (max-width: @breakPointM) {
+    width: 100%;
+  }
+}
