--- a/src/components/Onboarding/Spenden/style.module.less
+++ b/src/components/Onboarding/Spenden/style.module.less
@@ -1,5 +1,17 @@
 @import '../../../components/style/vars.less';
 
-.donationButtonRow {
-  margin: 3rem 0;
+.engagementOption {
+  padding: 1rem;
+  margin: 1rem 0;
+  color: @violet;
+  text-align: center;
+  font-size: @MobileFontSizeXL;
+  border: 1px solid @violet;
+  cursor: pointer;
+
+  &:hover {
+    background-color: @violet;
+    color: white;
+    text-decoration: underline;
+  }
 }
