Donation feature changes

--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -2,8 +2,7 @@
 
 .donationForm {
   font-weight: normal;
-  margin-top: 2em;
-  padding: 3rem;
+  padding-top: 1rem;
   // Only for HurrayCrowd component:
   // position: relative;
   // z-index: 1;
@@ -19,6 +18,10 @@
   @media (max-width: @breakPointS) {
     margin-top: 0;
     padding: 2.5rem 1.5rem;
+  }
+
+  .donationIntervalSelection {
+    margin-bottom: 5rem;
   }
 
   .selectionContainer {
