--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -30,7 +30,7 @@
 
   &:focus {
     outline: none;
-    box-shadow: inset 0 0 0 @borderWidthThick var(--font-color);
+    box-shadow: inset 0 0 0 @borderWidthThick var(--button-hover-font-color);
   }
 }
 
