--- a/src/components/Onboarding/Anmeldung/style.module.less
+++ b/src/components/Onboarding/Anmeldung/style.module.less
@@ -2,6 +2,16 @@
 
 .signupContainer {
   margin: 2rem 0;
-  background-color: @aqua;
   padding: 1rem;
+
+  background-color: @white;
+  color: @black;
+  --bg-color: @white;
+  --font-color: @black;
+  --secondary-color: @white;
+  --text-on-secondary-color: @black;
+  --button-font-color: @violet;
+  --button-bg-color: @violetTransparent;
+  --button-hover-bg-color: @violet;
+  --button-hover-font-color: @white;
 }
