--- a/src/components/Onboarding/style.module.less
+++ b/src/components/Onboarding/style.module.less
@@ -9,10 +9,22 @@
 
 .pageContainer {
   max-width: 74rem;
-  padding: 2rem 2rem;
+  padding: 1rem 2rem;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 2rem;
   margin-bottom: 2rem;
+
+  background-color: @white;
+  color: @black;
+  --bg-color: @white;
+  --font-color: @black;
+  --secondary-color: @aqua;
+  --text-on-secondary-color: @white;
+  --button-font-color: @violet;
+  --button-bg-color: @violetTransparent;
+  --button-hover-bg-color: @violet;
+  --button-hover-font-color: @white;
 
   @media (max-width: @breakPointM) {
     max-width: 72rem;
