--- a/src/components/Overlay/style.module.less
+++ b/src/components/Overlay/style.module.less
@@ -60,17 +60,32 @@
   position: fixed;
   top: 0;
   left: 0;
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
   z-index: 100;
   color: var(--font-color);
   padding: 3rem;
   overflow-y: scroll;
   overflow-x: hidden;
-  backdrop-filter: blur(35px);
 
   @media (max-width: @breakPointS) {
     padding: 1rem;
+  }
+}
+
+/* slightly transparent fallback */
+.backdropBlur {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+/* if backdrop support: very transparent and blurred */
+@supports (
+  (-webkit-backdrop-filter: blur(35px)) or (backdrop-filter: blur(35px))
+) {
+  .backdropBlur {
+    background-color: rgba(255, 255, 255, 0.5);
+    -webkit-backdrop-filter: blur(35px);
+    backdrop-filter: blur(35px);
   }
 }
 
