--- a/src/components/Onboarding/LoadingAnimation/style.module.less
+++ b/src/components/Onboarding/LoadingAnimation/style.module.less
@@ -1,3 +1,5 @@
+@import '../../style/vars.less';
+
 .loadingAnimationContainer {
   text-align: center;
 }
@@ -14,7 +16,7 @@
     width: 13px;
     height: 13px;
     border-radius: 50%;
-    background: #ff4646;
+    background: @red;
     animation-timing-function: cubic-bezier(0, 1, 1, 0);
   }
 
