--- a/src/components/Onboarding/style.module.less
+++ b/src/components/Onboarding/style.module.less
@@ -1,4 +1,5 @@
 @import '../../components/style/vars.less';
+
 .onboardingOverlayContainer {
   background-color: @white;
   border: 1px solid @violet;
@@ -173,4 +174,13 @@
 
 .buttonRow {
   margin: 3rem 0;
+}
+
+.signYouUpMessageContainer {
+  padding: 2rem;
+  text-align: center;
+}
+
+.signYouUpMessage {
+  color: @violet;
 }
