--- a/src/components/TickerToSignup/SignupButtonAndTile/style.module.less
+++ b/src/components/TickerToSignup/SignupButtonAndTile/style.module.less
@@ -1,4 +1,4 @@
-@import '../../components/style/vars.less';
+@import '../../../components/style/vars.less';
 
 .signUpCTA {
   font-size: @MobileFontSizeXL;
