added info text and more profile tile states

--- a/src/components/Profile/ProfileTile/style.module.less
+++ b/src/components/Profile/ProfileTile/style.module.less
@@ -80,6 +80,7 @@
   width: 47.5%;
   display: flex;
   justify-content: space-between;
+  align-content: flex-start;
   flex-wrap: wrap;
   @media (max-width: @breakPointL) {
     width: 100%;
