--- a/src/components/TickerToSignup/Ticker/style.module.less
+++ b/src/components/TickerToSignup/Ticker/style.module.less
@@ -80,5 +80,11 @@
 }
 
 .noMarginTop {
-  margin-top: 0;
+  margin-top: -1rem;
+}
+
+.highlightHeadline {
+  font-size: @DesktopFontSizeXXL;
+  font-weight: 600;
+  line-height: 1.1em; /* adjusted for Lato font */
 }
