Changed ticker font to Ideal

--- a/src/components/TickerToSignup/Ticker/reelstyle.less
+++ b/src/components/TickerToSignup/Ticker/reelstyle.less
@@ -18,16 +18,15 @@
 
   /** CUSTOMISE BELOW */
   font-size: @DesktopFontSizeXXL;
-  font-weight: 600;
+  font-weight: bold;
   // color: @white;
   border-bottom: 0px solid @white;
-  line-height: 0.95em; /* adjusted for Lato font */
+  line-height: 1.2em; /* adjusted for Ideal font */
 }
 
 @media (max-width: 500px) {
   .react-reel__reel {
     font-size: @MobileFontSizeXXL;
-    font-weight: 600;
     color: @white;
     border-bottom: 0px solid @white;
     line-height: 0.9em; /* adjusted for Lato font */
