--- a/src/components/TickerToSignup/Ticker/style.module.less
+++ b/src/components/TickerToSignup/Ticker/style.module.less
@@ -16,7 +16,7 @@
 }
 
 .slotMachine {
-  font-family: sans-serif;
+  //font-family: sans-serif;
   font-size: 4rem;
   margin-bottom: 4.5rem;
 
@@ -46,7 +46,7 @@
 }
 
 .counterLabelMarginLeft {
-  margin-left: 1.5rem;
+  margin-left: 0.5rem;
 
   @media (max-width: @breakPointS) {
     margin-left: 1rem;
