--- a/src/components/Onboarding/Share/style.module.less
+++ b/src/components/Onboarding/Share/style.module.less
@@ -19,6 +19,7 @@
   margin-right: 1rem;
   flex-grow: 1;
   flex-basis: 45%;
+  cursor: pointer;
 }
 
 .shareButtonContainer {
@@ -37,7 +38,6 @@
 
   @media (max-width: @breakPointM) {
     flex: 1 1 150px;
-    margin-right: 0.5rem;
   }
 }
 
@@ -75,4 +75,75 @@
 
 .iconCorrection {
   margin-top: 0.5rem;
+}
+
+.sharePreviewContainer {
+  position: relative;
+  height: 0;
+  padding-bottom: 53%;
+  margin: 0 auto;
+}
+
+.sharePreview {
+  width: 100%;
+  position: absolute;
+  top: 0;
+}
+
+.avatarImage {
+  position: absolute;
+  top: 25%;
+  left: 11%;
+  z-index: 10;
+  width: 25%;
+}
+
+.mainCaption {
+  position: absolute;
+  left: 45%;
+  top: 17.5%;
+  z-index: 10;
+  color: white;
+  font-size: 1.75rem;
+  max-width: 50%;
+
+  @media (max-width: @breakPointM) {
+    font-size: 1.5rem;
+  }
+
+  @media (max-width: 650px) {
+    font-size: 1.25rem;
+  }
+
+  @media (max-width: @breakPointS) {
+    font-size: 1rem;
+  }
+}
+
+.subCaption {
+  position: absolute;
+  left: 45%;
+  top: 57.5%;
+  z-index: 10;
+  color: white;
+  font-size: 1.5rem;
+  max-width: 50%;
+
+  @media (max-width: @breakPointM) {
+    font-size: 1.25rem;
+  }
+
+  @media (max-width: 650px) {
+    font-size: 1rem;
+  }
+
+  @media (max-width: @breakPointS) {
+    font-size: 0.75rem;
+  }
+}
+
+.imageUploadContainer {
+  display: flex;
+  justify-content: space-around;
+  margin: 3rem 0;
 }
