Changed white section secondary color

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -24,7 +24,7 @@
     color: @black;
     --bg-color: @white;
     --font-color: @black;
-    --secondary-color: @aqua;
+    --secondary-color: @violet;
     --text-on-secondary-color: @white;
     --button-font-color: @violet;
     --button-bg-color: @violetTransparent;
@@ -34,7 +34,7 @@
     h1,
     h2,
     h3 {
-      // Note: is that ok ?
+      // Note: Check if that works
       // color: @violet;
       color: var(--secondary-color);
     }
