--- a/src/components/Profile/ProfileNotifications/style.module.less
+++ b/src/components/Profile/ProfileNotifications/style.module.less
@@ -31,6 +31,19 @@
 
 .revokeButtonRow {
   margin-bottom: 1.5em;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row-reverse;
+}
+
+.revokeButton {
+  color: @aqua;
+  border: solid 2px @aqua;
+
+  &:hover {
+    color: white;
+    background: @aqua;
+  }
 }
 
 .cancelRevokeProcess {
