--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -119,12 +119,8 @@
   font-size: @DesktopFontSizeS;
 }
 
-.buttonContainer a {
-  border-color: @grey;
-  &:hover {
-    color: var(--font-color);
-    background: var(--bg-color);
-  }
+.emphasis {
+  font-weight: bold;
 }
 
 button {
