--- a/src/components/TickerToSignup/SignupButtonAndTile/style.module.less
+++ b/src/components/TickerToSignup/SignupButtonAndTile/style.module.less
@@ -1,14 +1,13 @@
 @import '../../../components/style/vars.less';
 
 .signUpCTA {
-  font-size: @MobileFontSizeXL;
-  width: 95%;
+  font-size: @DesktopFontSizeM;
   padding-top: 1rem;
   padding-bottom: 0.7rem;
 
-  @media (max-width: @breakPointM) {
-    width: 100%;
-  }
+  // @media (max-width: @breakPointM) {
+  //   width: 100%;
+  // }
 }
 
 .tileContainer {
@@ -23,14 +22,13 @@
     font-size: @DesktopFontSizeM;
     @media (max-width: @breakPointM) {
       font-size: @MobileFontSizeM;
-    margin-bottom: 1.5rem;
+      margin-bottom: 1.5rem;
     }
     @media (max-width: @breakPointS) {
       font-size: @MobileFontSizeM;
       line-height: 1.625rem;
     }
   }
-
 }
 
 &.sectionWhite {
