--- a/src/components/TickerToSignup/Ticker/reelstyle.less
+++ b/src/components/TickerToSignup/Ticker/reelstyle.less
@@ -17,18 +17,16 @@
   overflow-y: hidden;
 
   /** CUSTOMISE BELOW */
-  font-size: @DesktopFontSizeXXL;
+  font-size: @DesktopFontSizeXL;
   font-weight: 600;
   // color: @white;
   border-bottom: 0px solid @white;
   line-height: 0.95em; /* adjusted for Lato font */
 }
 
-
-
 @media (max-width: 500px) {
   .react-reel__reel {
-    font-size: @MobileFontSizeXXL;
+    font-size: @MobileFontSizeXL;
     font-weight: 600;
     color: @white;
     border-bottom: 0px solid @white;
