--- a/src/components/TickerToSignup/style.module.less
+++ b/src/components/TickerToSignup/style.module.less
@@ -1,6 +1,7 @@
-.signUpButton {
+.moreInfo {
   display: flex;
   flex-direction: row;
   justify-content: center;
   width: 100%;
+  margin-top: 1rem;
 }
