Donation feature launch (#214)
* Donation Feature quick fix

* Cleaned up donation form

* Added different payment types

* Button and overlay style changes

* - Added bank transfer info
- don't show donation interval after donating
- Save donation amount WIP

* - Quick fix Contentful
- Donation feature WIP

* Now sending correct data to backend

* - Added new paypal button
- prettier formatting
- Co-authored-by: Nicolai Mauersberg

* Console errors removed

Co-authored-by: Tatiana Schär <tsc@spacesquad.de>

--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -116,15 +116,11 @@
 }
 
 .hint {
-  font-size: @DesktopFontSizeXS;
+  font-size: @DesktopFontSizeS;
 }
 
-.buttonContainer a {
-  border-color: @grey;
-  &:hover {
-    color: var(--font-color);
-    background: var(--bg-color);
-  }
+.emphasis {
+  font-weight: bold;
 }
 
 button {
