--- a/src/components/Forms/SearchPlaces/style.module.less
+++ b/src/components/Forms/SearchPlaces/style.module.less
@@ -32,12 +32,14 @@
 }
 
 .searchBar {
-  border-radius: 25px;
-  border-color: @aqua;
-
   &:focus {
     outline: none;
     box-shadow: inset 0 0 0 @borderWidthThick @aqua;
+  }
+
+  &.isNotInsideForm {
+    border-radius: 25px;
+    border-color: @aqua;
   }
 }
 
