Key Visual improvements button fixes

--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -8,6 +8,8 @@
   text-decoration: none;
   font-size: @DesktopFontSizeM;
   font-weight: bold;
+  color: var(--button-font-color);
+  background-color: var(--button-bg-color);
 
   &.medium {
     font-size: @DesktopFontSizeM;
