--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -504,60 +504,93 @@
 .sections .keyVisualSection {
   position: relative;
   z-index: 1;
-  padding-bottom: 0rem;
+  padding: 0 0 0 0;
+
+  .sectionBody {
+    max-width: none;
+  }
 }
 
 .keyVisualWrapper {
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
+  align-items: center;
+  max-width: 1900px;
+  margin: 0 auto;
+  //flex-direction: row;
+
+  @media (max-width: @breakPointM) {
+    flex-wrap: wrap;
+  }
 }
 
 .keyClaim {
-  width: 37%;
+  max-width: 600px;
+  position: relative;
+  right: 4rem;
+  //flex-shrink: 4;
+
+  h1 {
+    font-size: 3rem;
+
+    @media (max-width: @breakPointL) {
+      font-size: 2rem;
+    }
+  }
+
+  @media (max-width: @breakPointXL) {
+    left: -12rem;
+  }
+
+  @media (max-width: @breakPointL) {
+    left: -7rem;
+  }
+
+  @media (max-width: @breakPointM) {
+    left: auto;
+    right: auto;
+  }
 }
 
 .keyVisual {
   // TODO: Position and size
   position: relative;
-  top: 2.5rem;
-  width: 60%;
-  height: 400px;
+  width: 1000px;
+  min-width: 900px;
+  height: 600px;
+  left: -13rem;
+  bottom: -2rem;
   z-index: 1;
-  background-size: contain;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-image: url(../../../assets/keyvisual/key-visual.svg);
 
-  @media (max-width: @breakPointL) {
-    width: 100%;
+  @media (max-width: @breakPointXL) {
+    width: 900px;
     height: 500px;
-    margin-top: 7rem;
-    margin-bottom: -5rem;
+    left: -15rem;
+  }
+
+  @media (max-width: @breakPointL) {
+    left: -7rem;
+    height: 350px;
+    width: 1200px;
   }
 
   @media (max-width: @breakPointM) {
+    left: auto;
     width: 100%;
-    height: 400px;
-    margin-top: 6rem;
-    margin-bottom: -5.5rem;
+    height: 500px;
   }
 
   @media (max-width: @breakPointS) {
-    width: 100%;
-    height: 200px;
-    margin-top: 5rem;
-    margin-bottom: -2rem;
+    //width: 100%;
+    height: 350px;
   }
 
   @media (max-width: 300px) {
-    margin-top: 3rem;
-    margin-bottom: -3rem;
-  }
-
-  @media (max-width: 220px) {
-    margin-top: 3rem;
-    margin-bottom: -5rem;
+    //width: 100%;
+    height: 300px;
   }
 }
 
@@ -579,6 +612,10 @@
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
   grid-template-rows: auto;
+
+  @media (max-width: @breakPointM) {
+    grid-template-columns: none;
+  }
 }
 
 .componentLeft {
