--- a/src/components/TickerToSignup/Ticker/style.module.less
+++ b/src/components/TickerToSignup/Ticker/style.module.less
@@ -11,7 +11,7 @@
 }
 
 .counterContainer {
-  margin-bottom: 1rem;
+  margin-bottom: 0;
   display: flex;
 }
 
@@ -30,6 +30,7 @@
   letter-spacing: 0.04px;
   margin-top: 0.85rem;
   margin-bottom: 0;
+  line-height: 8rem;
 
   @media (max-width: @breakPointS) {
     font-size: @MobileFontSizeXL;
