--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -520,6 +520,8 @@
 
   @media (max-width: @breakPointM) {
     flex-wrap: wrap;
+    align-items: unset;
+    flex-direction: column-reverse;
   }
 }
 
@@ -535,6 +537,10 @@
     @media (max-width: @breakPointL) {
       font-size: 2rem;
     }
+
+    @media (max-width: @breakPointS) {
+      font-size: 2.5rem;
+    }
   }
 
   @media (max-width: @breakPointXL) {
@@ -548,6 +554,12 @@
   @media (max-width: @breakPointM) {
     left: auto;
     right: auto;
+    padding: 3rem 1rem;
+  }
+
+  @media (max-width: @breakPointS) {
+    width: 100%;
+    padding: 5rem 1rem 1rem;
   }
 }
 
@@ -569,23 +581,28 @@
     width: 900px;
     height: 500px;
     left: -15rem;
+    min-width: 750px;
   }
 
   @media (max-width: @breakPointL) {
     left: -7rem;
     height: 350px;
-    width: 1200px;
   }
 
   @media (max-width: @breakPointM) {
-    left: auto;
-    width: 100%;
+    left: -9rem;
+    width: 820px;
     height: 500px;
+    bottom: -1.7rem;
+    transform: rotate(3deg);
   }
 
   @media (max-width: @breakPointS) {
     //width: 100%;
-    height: 350px;
+    height: 400px;
+    background-size: 70%;
+    left: -15rem;
+    margin-top: 1rem;
   }
 
   @media (max-width: 300px) {
@@ -620,20 +637,21 @@
 }
 
 .componentLeft {
-  grid-column-start: 1;
-  grid-column-end: 3;
+  margin-bottom: 3rem;
 
-  @media (mmin-width: @breakPointM) {
-    padding-right: 1.5rem;
+  @media (min-width: @breakPointM) {
+    padding-right: 2.5rem;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    margin-bottom: 0;
   }
 }
 
 .componentRight {
-  grid-column-start: 3;
-  grid-column-end: last-line;
-
-  @media (mmin-width: @breakPointM) {
-    padding-left: 1.5rem;
+  @media (min-width: @breakPointM) {
+    padding-left: 2.5rem;
+    grid-column-start: 3;
+    grid-column-end: last-line;
   }
 }
 
