--- a/src/components/Onboarding/Share/style.module.less
+++ b/src/components/Onboarding/Share/style.module.less
@@ -104,8 +104,12 @@
   top: 17.5%;
   z-index: 10;
   color: white;
-  font-size: 1.75rem;
+  font-size: 2.5rem;
   max-width: 50%;
+
+  @media (max-width: @breakPointL) {
+    font-size: 2rem;
+  }
 
   @media (max-width: @breakPointM) {
     font-size: 1.5rem;
@@ -126,8 +130,12 @@
   top: 57.5%;
   z-index: 10;
   color: white;
-  font-size: 1.5rem;
+  font-size: 2rem;
   max-width: 50%;
+
+  @media (max-width: @breakPointL) {
+    font-size: 1.5rem;
+  }
 
   @media (max-width: @breakPointM) {
     font-size: 1.25rem;
