--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -32,7 +32,10 @@
 
   &:focus {
     outline: none;
-    box-shadow: inset 0 0 0 @borderWidthThick var(--button-hover-font-color);
+    background-color: darken(@violet, 10%);
+    color: @white;
+    border-color: darken(@violet, 10%);
+    //box-shadow: inset 0 0 0 @borderWidthThick var(--button-hover-font-color);
   }
 }
 
