- Fixed key visual positioning - Added new breakpoint for very small screens - Fixed button padding for very small screens

--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -11,6 +11,10 @@
   padding: @buttonPadding;
   text-decoration: none;
 
+  @media (max-width: @breakPointXS) {
+    padding: @buttonPaddingSmall;
+  }
+
   &.medium {
     font-size: @DesktopFontSizeM;
   }
