--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -32,6 +32,7 @@
 @borderRadius: 2rem;
 @borderRadiusSmall: 0.9rem;
 @buttonPadding: 0.87rem 4.9rem 0.55rem;
+@buttonPaddingSmall: 0.87rem 2rem 0.55rem;
 @inputPadding: 0.8rem 0.8rem 0.5rem;
 
 @headerHeight: 5rem;
@@ -49,6 +50,7 @@
 @breakPointL: 1000px;
 @breakPointM: 800px;
 @breakPointS: 500px;
+@breakPointXS: 330px;
 
 .headerFooterGrid() {
   @half: calc(@contentWidthL / 2 - 1rem);
