--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -514,8 +514,8 @@
 .keyVisualWrapper {
   display: flex;
   align-items: center;
-  max-width: 1900px;
-  margin: 0 auto;
+  max-width: 1500px;
+  margin: 0 auto 3rem;
   //flex-direction: row;
 
   @media (max-width: @breakPointM) {
@@ -525,10 +525,20 @@
   }
 }
 
+.keyVisualContainer {
+  width: 50%;
+
+  @media (max-width: @breakPointM) {
+    width: 100%;
+  }
+}
+
 .keyClaim {
-  max-width: 600px;
-  position: relative;
-  right: 4rem;
+  width: 50%;
+  max-width: 700px;
+  padding-left: 2.5rem;
+  //position: relative;
+  //right: 4rem;
   //flex-shrink: 4;
 
   h1 {
@@ -543,33 +553,25 @@
     }
   }
 
-  @media (max-width: @breakPointXL) {
-    left: -12rem;
-  }
-
-  @media (max-width: @breakPointL) {
-    left: -7rem;
-  }
-
   @media (max-width: @breakPointM) {
-    left: auto;
-    right: auto;
-    padding: 3rem 1rem;
+    padding: 5rem 1rem 1rem;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 450px;
   }
 
   @media (max-width: @breakPointS) {
-    width: 100%;
-    padding: 5rem 1rem 1rem;
+    padding: 3rem 1rem 0;
   }
 }
 
 .keyVisual {
   // TODO: Position and size
   position: relative;
-  width: 1000px;
+  //width: 1000px;
   min-width: 900px;
   height: 600px;
-  left: -13rem;
+  left: -15rem;
   bottom: -2rem;
   z-index: 1;
   background-size: cover;
@@ -578,31 +580,31 @@
   background-image: url(../../../assets/keyvisual/key-visual.svg);
 
   @media (max-width: @breakPointXL) {
-    width: 900px;
     height: 500px;
-    left: -15rem;
+    left: -13rem;
     min-width: 750px;
   }
 
   @media (max-width: @breakPointL) {
     left: -7rem;
     height: 350px;
+    min-width: 550px;
   }
 
   @media (max-width: @breakPointM) {
     left: -9rem;
     width: 820px;
     height: 500px;
-    bottom: -1.7rem;
-    transform: rotate(3deg);
+    //bottom: -1.7rem;
   }
 
   @media (max-width: @breakPointS) {
     //width: 100%;
     height: 400px;
-    background-size: 70%;
+    background-size: 80%;
+    bottom: -4.2rem;
     left: -15rem;
-    margin-top: 1rem;
+    transform: rotate(3deg);
   }
 
   @media (max-width: 300px) {
