--- a/src/components/Municipality/MunicipalityMapAndSearch/style.module.less
+++ b/src/components/Municipality/MunicipalityMapAndSearch/style.module.less
@@ -11,6 +11,7 @@
   grid-column-end: 2;
   grid-row-start: 1;
   grid-row-end: last-line;
+  padding-right: 1.5rem;
 }
 
 .legend {
@@ -18,6 +19,7 @@
   grid-column-end: last-line;
   grid-row-start: 2;
   grid-row-end: 6;
+  padding-left: 1.5rem;
 }
 
 .searchWrapper {
@@ -28,4 +30,5 @@
   display: flex;
   justify-content: center;
   padding: 1.5rem 0;
+  padding-left: 1.5rem;
 }
