Mobile styling for counter

--- a/src/components/TickerToSignup/Ticker/reelstyle.less
+++ b/src/components/TickerToSignup/Ticker/reelstyle.less
@@ -19,16 +19,12 @@
   /** CUSTOMISE BELOW */
   font-size: @DesktopFontSizeXXL;
   font-weight: bold;
-  // color: @white;
   border-bottom: 0px solid @white;
-  line-height: 1.2em; /* adjusted for Ideal font */
-}
+  line-height: 1.2em;
 
-@media (max-width: 500px) {
-  .react-reel__reel {
+  @media (max-width: 500px) {
     font-size: @MobileFontSizeXXL;
-    color: @white;
     border-bottom: 0px solid @white;
-    line-height: 0.9em; /* adjusted for Lato font */
+    line-height: 1.3;
   }
 }
