--- a/src/components/TickerToSignup/Ticker/style.module.less
+++ b/src/components/TickerToSignup/Ticker/style.module.less
@@ -1,8 +1,6 @@
 @import '../../../components/style/vars.less';
 
 .contentContainer {
-  // background-color: @violet;
-  // color: @white;
   margin: auto;
 }
 
@@ -13,16 +11,21 @@
 .counterContainer {
   margin-bottom: 0;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .slotMachine {
-  //font-family: sans-serif;
   font-size: 4rem;
   margin-bottom: 2.5rem;
+  text-align: center;
 
   @media (max-width: @breakPointM) {
     font-size: 1.5rem;
   }
+}
+
+.numbersContainer {
+  margin: 0 auto;
 }
 
 .counterLabelSlotMachine {
@@ -31,6 +34,9 @@
   margin-top: 0.85rem;
   margin-bottom: 0;
   line-height: 8rem;
+  width: 100%;
+  line-height: 2;
+  margin-right: 0;
 
   @media (max-width: @breakPointS) {
     font-size: @MobileFontSizeXL;
@@ -42,7 +48,7 @@
   margin-right: 0.75rem;
 
   @media (max-width: @breakPointS) {
-    margin-right: 1rem;
+    margin-right: 0;
   }
 }
 
@@ -50,7 +56,7 @@
   margin-left: 0.5rem;
 
   @media (max-width: @breakPointS) {
-    margin-left: 1rem;
+    margin-left: 0;
   }
 }
 
@@ -87,5 +93,5 @@
 .highlightHeadline {
   font-size: @DesktopFontSizeXXL;
   font-weight: 600;
-  line-height: 1.1em; /* adjusted for Lato font */
+  line-height: 1.1em;
 }
