Increased intro text font size

--- a/src/components/IntroText/style.module.less
+++ b/src/components/IntroText/style.module.less
@@ -1,3 +1,9 @@
+@import '../style/vars.less';
+
+.introText {
+  font-size: @DesktopFontSizeL;
+}
+
 .logoContainer {
   display: flex;
   flex-direction: row;
