- CTA buttons left aligned - Execept ticker button - Co-authored-by: Nicolai Mauersberg <nmauersberg@users.noreply.github.com>

--- a/src/components/TickerToSignup/SignupButton/style.module.less
+++ b/src/components/TickerToSignup/SignupButton/style.module.less
@@ -1,6 +1,13 @@
+@import '../../style/vars.less';
+
 .signUpButton {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin-top: 1rem;
   width: 100%;
+
+  @media (min-width: @breakPointM) {
+    justify-content: flex-start;
+  }
 }
