Intro Text mobile

--- a/src/components/IntroText/style.module.less
+++ b/src/components/IntroText/style.module.less
@@ -2,6 +2,10 @@
 
 .introText {
   font-size: @DesktopFontSizeL;
+
+  @media (max-width: @breakPointS) {
+    font-size: @MobileFontSizeL;
+  }
 }
 
 .logoContainer {
