--- a/src/components/Layout/Footer/style.module.less
+++ b/src/components/Layout/Footer/style.module.less
@@ -4,14 +4,18 @@
   background: @red;
   color: @greyBright;
   min-height: 15rem;
-  padding: 2rem 1rem;
+  padding: 3rem 0 6rem;
   font-size: @DesktopFontSizeM;
-  --secondary-color: @aqua;
+  --secondary-color: @white;
+  text-align: center;
+
+  @media (max-width: @breakPointS) {
+    padding: 3rem;
+  }
 }
 
 .itemContainer {
   width: @headerWidth;
-  display: flex;
   justify-content: space-between;
   margin: auto;
 
@@ -20,26 +24,19 @@
   }
 }
 
-.columnLeft {
-  max-width: 45%;
-}
-
-.columnRight {
-  max-width: 45%;
-  text-align: right;
-}
-
 .nav {
   list-style: none;
   padding: 0;
   margin: -0.5rem;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-end;
+  justify-content: center;
 
   @media (max-width: @breakPointM) {
+    width: 100%;
     display: block;
     margin: 0rem 0 2rem;
+    line-height: 3rem;
   }
 }
 
@@ -63,7 +60,7 @@
 }
 
 .socialMedia {
-  margin-top: 1rem;
+  margin: 2rem 0;
 }
 
 .partnerLogos {
