--- a/src/components/Onboarding/Share/style.module.less
+++ b/src/components/Onboarding/Share/style.module.less
@@ -101,10 +101,10 @@
 .mainCaption {
   position: absolute;
   left: 45%;
-  top: 17.5%;
+  top: 15%;
   z-index: 10;
-  color: white;
-  font-size: 2.5rem;
+  color: white !important;
+  font-size: 2.25rem;
   max-width: 50%;
 
   @media (max-width: @breakPointL) {
@@ -129,7 +129,7 @@
   left: 45%;
   top: 57.5%;
   z-index: 10;
-  color: white;
+  color: white !important;
   font-size: 2rem;
   max-width: 50%;
 
