--- a/src/components/Municipality/MunicipalityMapAndSearch/style.module.less
+++ b/src/components/Municipality/MunicipalityMapAndSearch/style.module.less
@@ -1,9 +1,16 @@
+@import '../../style/vars.less';
+
 .mapSectionContainer {
   display: grid;
   grid-template-columns: 60% 40%;
   grid-template-rows: 20% 20% 20% 20% 20%;
   height: 90vh;
   margin-bottom: 2rem;
+  @media (max-width: @breakPointL) {
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
+    height: auto;
+  }
 }
 
 .map {
@@ -11,6 +18,13 @@
   grid-column-end: 2;
   grid-row-start: 1;
   grid-row-end: last-line;
+  @media (max-width: @breakPointL) {
+    order: 1;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    padding-right: 0rem;
+  }
   padding-right: 1.5rem;
 }
 
@@ -19,6 +33,13 @@
   grid-column-end: last-line;
   grid-row-start: 2;
   grid-row-end: 6;
+  @media (max-width: @breakPointL) {
+    order: 2;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start:3;
+    padding-left: 0rem;
+  }
   padding-left: 1.5rem;
 }
 
@@ -30,5 +51,12 @@
   display: flex;
   justify-content: center;
   padding: 1.5rem 0;
+  @media (max-width: @breakPointL) {
+    order: 0;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    padding-left: 0rem;
+  }
   padding-left: 1.5rem;
 }
