--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -511,11 +511,15 @@
   }
 }
 
+.keyVisuallowerBorder {
+  border-bottom: 6rem solid @violet;
+}
+
 .keyVisualWrapper {
   display: flex;
   align-items: center;
   max-width: 1500px;
-  margin: 0 auto 3rem;
+  margin: 0 auto -3rem;
 
   @media (max-width: @breakPointM) {
     flex-wrap: wrap;
