--- a/src/components/IntroText/style.module.less
+++ b/src/components/IntroText/style.module.less
@@ -17,15 +17,33 @@
 
 .diwLogo {
   width: 30%;
-  min-width: 100px;
+  display: flex;
+  align-items: center;
+  img {
+width: 100%;
+    height:auto;
+    min-width: 100px;
+  }
 }
 
 .changeLogo {
   width: 20%;
-  min-width: 100px;
+  display: flex;
+  align-items: center;
+  img {
+width: 100%;
+    height:auto;
+    min-width: 100px;
+  }
 }
 
 .xbgeLogo {
   width: 32%;
-  min-width: 100px;
+  display: flex;
+  align-items: center;
+  img {
+width: 100%;
+    height:auto;
+    min-width: 100px;
+  }
 }
