Test: IE button fix

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -27,6 +27,7 @@
     --secondary-color: @violet;
     --text-on-secondary-color: @white;
     --button-font-color: @violet;
+    --button-bg-color: rgb(152, 133, 255); // IE Fallback
     --button-bg-color: @violetTransparent;
     --button-hover-bg-color: @violet;
     --button-hover-font-color: @white;
@@ -48,6 +49,7 @@
     --secondary-color: @aqua;
     --text-on-secondary-color: @white;
     --button-font-color: @white;
+    --button-bg-color: @white; // IE Fallback
     --button-bg-color: @whiteTransparent;
     --button-hover-bg-color: @white;
     --button-hover-font-color: @violet;
