--- a/src/components/Onboarding/Share/style.module.less
+++ b/src/components/Onboarding/Share/style.module.less
@@ -94,15 +94,16 @@
   position: absolute;
   top: 25%;
   left: 11%;
-  z-index: 10;
+  z-index: 2;
   width: 25%;
+  height: auto;
 }
 
 .mainCaption {
   position: absolute;
   left: 45%;
   top: 15%;
-  z-index: 10;
+  z-index: 2;
   color: white !important;
   font-size: 2.25rem;
   max-width: 50%;
@@ -154,4 +155,20 @@
   display: flex;
   justify-content: space-around;
   margin: 3rem 0;
+}
+
+.sharePicInstagram {
+  margin-left: 5%;
+  width: 90%;
+  border: solid 0.5rem @violet;
+
+  &:hover {
+    border: solid 0.5rem @aqua;
+    cursor: pointer;
+  }
+}
+
+.instaImageContainer {
+  display: flex;
+  justify-content: space-between;
 }
