--- a/src/components/Overlay/style.module.less
+++ b/src/components/Overlay/style.module.less
@@ -75,7 +75,7 @@
 
 /* slightly transparent fallback */
 .backdropBlur {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: white;
 }
 
 /* if backdrop support: very transparent and blurred */
