--- a/src/components/IntroText/style.module.less
+++ b/src/components/IntroText/style.module.less
@@ -11,39 +11,39 @@
 .logoContainer {
   display: flex;
   flex-direction: row;
-  flex-direction: wrap;
-  justify-content: space-around;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.partnerLogo {
+  width: 49%;
+  max-width: 300px;
+  padding: 0.5rem;
+
+  img {
+    width: 100%;
+    height: auto;
+    min-width: 100px;
+  }
 }
 
 .diwLogo {
-  width: 30%;
   display: flex;
   align-items: center;
-  img {
-width: 100%;
-    height:auto;
-    min-width: 100px;
-  }
 }
 
 .changeLogo {
-  width: 20%;
   display: flex;
   align-items: center;
-  img {
-width: 100%;
-    height:auto;
-    min-width: 100px;
-  }
+}
+
+.fribisLogo {
+  display: flex;
+  align-items: center;
+  background-color: white;
 }
 
 .xbgeLogo {
-  width: 32%;
   display: flex;
   align-items: center;
-  img {
-width: 100%;
-    height:auto;
-    min-width: 100px;
-  }
 }
