--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -35,6 +35,7 @@
     color: @violet;
     padding: 1.2rem 2rem 1rem;
     margin-right: 1rem;
+    margin-bottom: 1rem;
     min-width: 10rem;
     text-align: center;
   }
@@ -116,6 +117,7 @@
 
 .hint {
   font-size: @DesktopFontSizeS;
+  margin-bottom: 3rem;
 }
 
 .emphasis {
