--- a/src/components/TickerToSignup/Ticker/reelstyle.less
+++ b/src/components/TickerToSignup/Ticker/reelstyle.less
@@ -22,6 +22,18 @@
   border-bottom: 0px solid @white;
   line-height: 1.2em;
 
+  @media (max-width: 930px) {
+    font-size: @DesktopFontSizeXL;
+    border-bottom: 0px solid @white;
+    line-height: 1.3;
+  }
+
+  @media (max-width: @breakPointM) {
+    font-size: @DesktopFontSizeXL;
+    border-bottom: 0px solid @white;
+    line-height: 1.3;
+  }
+
   @media (max-width: 500px) {
     font-size: @MobileFontSizeXXL;
     border-bottom: 0px solid @white;
