--- a/src/components/TickerToSignup/Ticker/style.module.less
+++ b/src/components/TickerToSignup/Ticker/style.module.less
@@ -94,4 +94,12 @@
   font-size: @DesktopFontSizeXXL;
   font-weight: 600;
   line-height: 1.1em;
+
+  @media (max-width: 1600px) {
+    font-size: 3.5rem;
+  }
+
+  @media (max-width: @breakPointM) {
+    font-size: 5rem;
+  }
 }
