--- a/src/components/TickerToSignup/Ticker/reelstyle.less
+++ b/src/components/TickerToSignup/Ticker/reelstyle.less
@@ -22,21 +22,21 @@
   border-bottom: 0px solid @white;
   line-height: 1.2em;
 
-  @media (max-width: 930px) {
-    font-size: @DesktopFontSizeXL;
+  @media (max-width: 1000px) {
+    font-size: 5rem;
     border-bottom: 0px solid @white;
-    line-height: 1.3;
+    line-height: 1.3em;
   }
 
   @media (max-width: @breakPointM) {
-    font-size: @DesktopFontSizeXL;
+    font-size: @DesktopFontSizeXXL;
     border-bottom: 0px solid @white;
-    line-height: 1.3;
+    line-height: 1.3em;
   }
 
-  @media (max-width: 500px) {
+  @media (max-width: 530px) {
     font-size: @MobileFontSizeXXL;
     border-bottom: 0px solid @white;
-    line-height: 1.3;
+    line-height: 1.3em;
   }
 }
