fix for webgl highp precision not availableon some browsers, deckgl errors are now caught and fallback image will be shown, updated deckgl

--- a/src/components/Municipality/MunicipalityMap/style.module.less
+++ b/src/components/Municipality/MunicipalityMap/style.module.less
@@ -32,7 +32,7 @@
     background-image: url('./assets/map.png');
   }
   &.fallback {
-    background-image: url('./assets/map-full.png');
+    background-image: url('./assets/map-full.jpg');
   }
 }
 
