--- a/src/components/Forms/SearchPlaces/style.module.less
+++ b/src/components/Forms/SearchPlaces/style.module.less
@@ -2,6 +2,7 @@
 @inputWidth: 25rem;
 @inputButtonMargin: 0.4rem;
 
+
 .container {
   color: @white;
   display: flex;
@@ -11,7 +12,8 @@
   margin-top: -@inputButtonMargin;
   --secondary-color: @white;
   @media (max-width: @breakPointM) {
-    // margin-bottom: 1rem;
+    width: 100%;
+    justify-content: center;
   }
 }
 
@@ -23,6 +25,10 @@
   margin-top: @inputButtonMargin;
   margin-bottom: @inputButtonMargin;
   color: var(--secondary-color);
+  @media (max-width: @breakPointM) {
+    width: 100%;
+    margin-right: 0rem;
+  }
 }
 
 .searchTitle {
