fixed legend svg styling

--- a/src/components/Municipality/MunicipalityMap/style.module.less
+++ b/src/components/Municipality/MunicipalityMap/style.module.less
@@ -198,11 +198,14 @@
   & div {
     display: inline-block;
     height: 100%;
+    width: auto;
     & svg {
       height: 100%;
+      width: auto;
     }
   }
   & .legendGradient {
+    height: auto;
     width: 100%;
     & svg {
       height: 100%;
