--- a/src/components/Municipality/MunicipalityMap/style.module.less
+++ b/src/components/Municipality/MunicipalityMap/style.module.less
@@ -198,14 +198,13 @@
   & div {
     display: inline-block;
     height: 100%;
-    width: auto;
+    width: 50%;
     & svg {
       height: 100%;
-      width: auto;
+      width: 100%;
     }
   }
   & .legendGradient {
-    height: auto;
     width: 100%;
     & svg {
       height: 100%;
