--- a/src/components/Municipality/MunicipalityMap/MapTooltip/style.module.less
+++ b/src/components/Municipality/MunicipalityMap/MapTooltip/style.module.less
@@ -11,6 +11,7 @@
   pointer-events: none;
   padding: 1.5rem;
   z-index: 3;
+  color: rgba(255,255,255,0.9);
   border: 2px solid #fff;
   transform: translateX(-50%) translateY(5px);
   -ms-user-select: none;
@@ -36,13 +37,5 @@
 .tooltipInfo {
   margin-top: 0.4rem;
   line-height: @DesktopFontSizeS;
-}
-
-.tooltipNumber {
   font-size: @DesktopFontSizeXS;
-}
-
-.tooltipLabel {
-  font-size: @DesktopFontSizeXS;
-  font-weight: 400;
 }
