--- a/src/components/Login/EnterLoginCode/style.module.less
+++ b/src/components/Login/EnterLoginCode/style.module.less
@@ -22,3 +22,12 @@
 .loginForm {
   margin-bottom: 0;
 }
+.counterDescriptionContainer {
+  max-width: 13rem;
+}
+
+.counterDescription {
+  margin: 0;
+  text-align: center;
+  font-size: @DesktopFontSizeS;
+}
